<resources>
    <string name="app_name">R19</string>
    <string name="action_settings">Settings</string>
    <string name="router_name">Prof. Smith\'s Router</string>
    <string name="adjacencyTableTitleText">Adjacency Table</string>
    <string name="arp_table_title_text">ARP Table</string>
    <string name="forwardingTableTitle">Forwarding Table</string>
    <string name="Routing_table_Title">Routing Table</string>
    <string name="showIPAddressMenuText">Show IP Address</string>
</resources>
